--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ Development Agency &amp; Landing Page</title>
 Development Agency">
     <meta name="framer-search-index" content="https://framerusercontent.com/sites/2bFAz9LB3v5RLKlMkQnCCO/searchIndex-iclIDqdIITBL.json">
     <meta name="framer-search-index-fallback" content="https://framerusercontent.com/sites/2bFAz9LB3v5RLKlMkQnCCO/searchIndex-P7MMze0Y99aM.json">
-    <link href="https://framerusercontent.com/sites/icons/default-favicon-light.v1.png" rel="icon" media="(prefers-color-scheme: light)">
-    <link href="https://framerusercontent.com/sites/icons/default-favicon-dark.v1.png" rel="icon" media="(prefers-color-scheme: dark)">
+    <link href="https://framerusercontent.com/images/bUSMwAvyfR09vQhj2y66ep3P0k.png?width=320&height=320" rel="icon" media="(prefers-color-scheme: light)">
+    <link href="https://framerusercontent.com/images/bUSMwAvyfR09vQhj2y66ep3P0k.png?width=320&height=320" rel="icon" media="(prefers-color-scheme: dark)">
     <link rel="apple-touch-icon" href="https://framerusercontent.com/sites/icons/default-touch-icon.v3.png">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
