Clean up index.html and add Open Graph comment
Removed unnecessary empty lines and added a comment for Open Graph.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ Development Agency">
     <link href="https://framerusercontent.com/images/bUSMwAvyfR09vQhj2y66ep3P0k.png?width=320&height=320" rel="icon" media="(prefers-color-scheme: dark)">
     <link rel="apple-touch-icon" href="https://framerusercontent.com/sites/icons/default-touch-icon.v3.png">
     <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Landin - Premium Agency &amp; Landing Page">
     <meta property="og:description" content="Landin is a premium agency and landing page template, perfect for showcasing your brand with a sleek, modern design, responsive layouts, and easy customization.">
@@ -31,9 +32,6 @@ Development Agency">
     <meta name="twitter:title" content="Landin - Premium Agency &amp; Landing Page">
     <meta name="twitter:description" content="Landin is a premium agency and landing page template, perfect for showcasing your brand with a sleek, modern design, responsive layouts, and easy customization.">
     <meta name="twitter:image" content="https://framerusercontent.com/images/eB4kLBCFbohpyEjQGutHBTMViQ.png">
-
-
-
     <style data-framer-css-ssr>
         html, body, #main {
             margin: 0;
@@ -295,6 +293,7 @@ Development Agency">
     <div id="main"></div>
     <script >!function(){var w="framer_variant";function u(a,r){let n=r.indexOf("#"),t=n===-1?r:r.substring(0,n),i=n===-1?"":r.substring(n),e=t.indexOf("?"),h=e===-1?t:t.substring(0,e),d=e===-1?"":t.substring(e),s=new URLSearchParams(d),g=new URLSearchParams(a);for(let[o,l]of g)s.has(o)||o!==w&&s.append(o,l);let c=s.toString();return c===""?t+i:h+"?"+c+i}var p='div#main a[href^="#"],div#main a[href^="/"],div#main a[href^="."]',f="div#main a[data-framer-preserve-params]",m,S=(m=document.currentScript)==null?void 0:m.hasAttribute("data-preserve-internal-params");if(window.location.search&&!/bot|-google|google-|yandex|ia_archiver|crawl|spider/iu.test(navigator.userAgent)){let a=document.querySelectorAll(S?`${p},${f}`:f);for(let r of a){let n=u(window.location.search,r.href);r.setAttribute("href",n)}}
 }()</script>
+    
     
     <script data-framer-appear-animation="no-preference"></script>
     <script type="module" async data-framer-bundle="main">
