Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 
         <nav class="nav-links">
             <a href="#services" class="nav-item">Services</a>
-            <a href="#about" class="nav-item">About Us</a>
-            <a href="#approach" class="nav-item">Our Approach</a>
+            <a href="About-us.html" class="nav-item">About Us</a>
+            <a href="our-approch.html" class="nav-item">Our Approach</a>
             <a href="#approach" class="nav-item">Case study / blogs</a>
+             <a href="jobs.html" class="nav-item">join us </a>
+            
         </nav>
 
         <div class="header-actions">
