--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
         <nav class="nav-links">
             <a href="#services" class="nav-item">Services</a>
-            <a href="About-us.html" class="nav-item">About Us</a>
-            <a href="our-approch.html" class="nav-item">Our Approach</a>
+            <a href="pages/About-us.html" class="nav-item">About Us</a>
+            <a href="pages/our-approch.html" class="nav-item">Our Approach</a>
             <a href="#approach" class="nav-item">Case study / blogs</a>
-             <a href="jobs.html" class="nav-item">join us </a>
+             <a href="pages/jobs.html" class="nav-item">join us </a>
             
         </nav>
 
