--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -137,7 +137,7 @@
 <body>
 
     <section class="join-hero">
-        <a href="index.html" style="text-decoration: none; color: var(--primary); font-weight: 600;">← Back to Home</a>
+        <a href="https://unlitify.vercel.app/" style="text-decoration: none; color: var(--primary); font-weight: 600;">← Back to Home</a>
         <h1>Don't Apply for a Job.<br><span class="highlight-blue">Build the Future of Growth.</span></h1>
         <p style="max-width: 600px; margin: 20px auto; color: #64748b;">Unlitify isn't a corporate ladder. It's a seat at the table for builders, freelancers, and hungry creators.</p>
     </section>
