Update navigation links in About-us.html

--- a/pages/About-us.html
+++ b/pages/About-us.html
@@ -121,20 +121,21 @@
             .stats-row { flex-direction: column; gap: 40px; }
         }
     </style>
-
-    <header class="header-wrapper">
+<header class="header-wrapper">
     <div class="header-main">
         <div class="logo">
-            <a href="#">
+            <a href="https://unlitify.vercel.app/">
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjfVDkgW1JUyw5iwouB6zPni-6yXI8TR5xv3Rpqi_G6xNieH9eUPzu4hmzOzuH9rPfXs2-jgsCuJsmo8OWIe0kNYpHHxwLJEGKD67tO6mUtH0qhuMPOFNm1X3E3cIu-L5oLcloH-AF6uF_giIgRvHD_VBIyHjghZyNOYXKh_Zk7ihyLveYVe6mk2p3ytr7r=w200" alt="Unlitify" class="logo-img">
             </a>
         </div>
 
         <nav class="nav-links">
             <a href="#services" class="nav-item">Services</a>
-            <a href="#about" class="nav-item">About Us</a>
-            <a href="#approach" class="nav-item">Our Approach</a>
+            <a href="pages/About-us.html" class="nav-item">About Us</a>
+            <a href="pages/our-approch.html" class="nav-item">Our Approach</a>
             <a href="#approach" class="nav-item">Case study / blogs</a>
+             <a href="pages/jobs.html" class="nav-item">join us </a>
+            
         </nav>
 
         <div class="header-actions">
@@ -147,6 +148,7 @@
         </div>
     </div>
 </header>
+
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap');
