Update link for SEO section to point to seo.html

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ body {
             <div class="content">
                 <h3>Search Engine Optimization (SEO)</h3>
                 <p>Improve your website's visibility in search engine results and drive organic traffic to your business.</p>
-                <a href="#" class="btn-link">Learn more</a>
+                <a href="seo.html" class="btn-link">Learn more</a>
             </div>
         </div>
 
