--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ body {
 
     <div class="services-grid">
         <div class="service-card">
-            <div class="image-wrapper"><img src="seo.jpg" alt="SEO"></div>
+            <div class="image-wrapper"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj8ysXQnu4rOU-ZrU8VsqAUxEw4l0x0dndukz5NKTXd8y3edVcha1EG5npoywZsnANxB0lIG9Y0yJVlaF7jyZjpchuMT3TFjN75knPqjKTAqU8lG3bljIj4wHf9LHdkKIpEc9ITIk_ypKdPX0WrT7JJVjjq6cTmcxNlm0Swvh5l4MQRBPhc-df1uI3E8ZL9/s1080/7020729200.png" alt="SEO"></div>
             <div class="content">
                 <h3>Search Engine Optimization (SEO)</h3>
                 <p>Improve your website's visibility in search engine results and drive organic traffic to your business.</p>
