--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ body {
         </div>
 
         <div class="service-card">
-            <div class="image-wrapper"><img src="google-ads.jpg" alt="Google Ads"></div>
+            <div class="image-wrapper"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi-L8eO6wBeI6GZR_hBk28Yf1RNaQJG8C8phAkaYZwXAfQYPppod4-SUVlpkKoRfCLQ_zGThgP0Y7rz-7vwfgJVF8db8oZGrxvjP8ZnToC7BYBx463w4hvjjpyEVYaXr4yZng_nzjV4E_dTQgSqK8kXJ8FmSMy_FS8ezWF8zdYFGq2WHtat8n8NRvoPliwU/s320/google%20ads%20by%20unlitify.png" alt="Google Ads"></div>
             <div class="content">
                 <h3>Google Ads</h3>
                 <p>Target potential customers at the exact moment they're searching for products or services like yours.</p>
