--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ body {
         </div>
 
         <div class="service-card">
-            <div class="image-wrapper"><img src="whatsapp.jpg" alt="WhatsApp Marketing"></div>
+            <div class="image-wrapper"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjkwycdKhf-Qc1SlHZc82oKUcP0xGcuAtloGwOMkZOlnfUj_xMlOfX26PKgbFkYszXGhqWY_2KEYXxULLFwdt0uDQBRaM3FBnvKr9vvbnnr0IeCInh9fmdxwTOlirdnxrq-58_mxZLBOlezwoxFBtBkE8RL6fcGPCunGwXCSVgP6izvcxZtKpIFqNAXv9oR/s320/WhatsApp%20%20Marketing%20.png" alt="WhatsApp Marketing"></div>
             <div class="content">
                 <h3>WhatsApp Marketing</h3>
                 <p>Connect with your Clients Directly through WhatsApp & Target potential customers with ease and automation.</p>
