--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ body {
         </div>
 
         <div class="service-card">
-            <div class="image-wrapper"><img src="ppc.jpg" alt="PPC Advertising"></div>
+            <div class="image-wrapper"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgcyJTFUGeyFKnHag5WLt0r7kUy5CSvLax-kOtWc2XqsSQtKqqqBihJBG4Xb95xCWwHRbNmGK2ZiuijGDh38vpug8DgIfsqYAWnDdNwyGolfbiKs87XP75WX7eWloxsy5v9sRvxW9m-UQPdteeQp22xZudsWZwdkhBk6SRiKTu5iHModM7Am30yil9WpgMm/s320/PPC%20SERVICES.png" alt="PPC Advertising"></div>
             <div class="content">
                 <h3>Pay-per-click (PPC)</h3>
                 <p>Drive targeted traffic to your website and only pay when someone clicks on your ad.</p>
@@ -516,7 +516,7 @@ body {
         </div>
 
         <div class="service-card">
-            <div class="image-wrapper"><img src="social-media.jpg" alt="Social Media Marketing"></div>
+            <div class="image-wrapper"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgGeN5BNVlW5I5vdoKw41QeX8n2Y7dJFTnx-OjM1zi3aZZAZelbzeUQJp9wc90tOEeqxTUQmOvdsKnhYiaBr6aPHv__3ULtnP34ccvKEEzW6m76LXKIxYAKWcIS_Jp9_j3cc2133XhPsmqY6p28mRkijCvG-ukIufMXDv-3R2XGTmEblfUSUBS2ijiP4oFW/s320/Social%20Media%20Marketing%20.png" alt="Social Media Marketing"></div>
             <div class="content">
                 <h3>Social Media Marketing</h3>
                 <p>Build your Brand Presence and Engage with Your Audience Across Various Social Media Platforms.</p>
