--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ body {
         </div>
 
         <div class="service-card">
-            <div class="image-wrapper"><img src="email.jpg" alt="Email Marketing"></div>
+            <div class="image-wrapper"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgikmI-1ZBgsKMGu21kCFpubHg8YCGh1w9xAUzjhdZe3MRbWUQQvKsE9w1w11CTxGYwIQT-DxsyTe8X1Y9IM6H-6dLcTuk4WcH9KnfhJ8QFKg6zyDwcAdiAvnzB-ArV6rUzPTjzLxiW-TtStuj-LS0zjQmeb7LXTAGRFNTmSrhCTlAXY8g3N9BoGWqIy0r7/s320/EMAIL%20MARKETING.png" alt="Email Marketing"></div>
             <div class="content">
                 <h3>Email Marketing</h3>
                 <p>Connect with your customers through personalized email campaigns that nurture leads and drive sales.</p>
@@ -534,7 +534,7 @@ body {
         </div>
 
         <div class="service-card">
-            <div class="image-wrapper"><img src="content.jpg" alt="Content Creation"></div>
+            <div class="image-wrapper"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgxvMCHR_wdPspSmulaUYzi8kdkGH2IBfivnIdW1WN_GCqmuoekLjxHwXNgLzaqCtyXfJlrVZJHL8t8_SQL9uBywjZnzQKB3EhocUpav7RM2r9DoyUB2RTtgIKN3OW9tG5IupI_2g9W2nIvZho9ySyrVCbWRiXolWKbSMiWqyFWDkhhDPTnp2VYXG8eEFJa/s1080/CONTENT%20CREATION%20AND.png" alt="Content Creation"></div>
             <div class="content">
                 <h3>Content Creation</h3>
                 <p>Create engaging, valuable content that attracts and retains customers while establishing brand authority.</p>
@@ -543,7 +543,7 @@ body {
         </div>
 
         <div class="service-card">
-            <div class="image-wrapper"><img src="web-design.jpg" alt="Website Design"></div>
+            <div class="image-wrapper"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhQa6wYJC3WeJEdQ_nphd_3AcFK-k9QrYHR2hanVlJerrQjwtWyqcFO2gFqTxAJ00eOD2XlZ7o_JL0T2x8MoEF5wIxq3sjbvqEbgOMaWShaA3hJta2UjBv13VCPwoULsCMPuOOrqLbRGGb42IQX6iFGMjAFyIql0ANMaZrOOTEozxKCoN2ocQZSEksYapo4/s320/Website%20Design%20&%20.png" alt="Website Design"></div>
             <div class="content">
                 <h3>Website Design & Dev</h3>
                 <p>Create stunning, responsive websites that look great on all devices and help you achieve your goals.</p>
@@ -552,7 +552,7 @@ body {
         </div>
 
         <div class="service-card">
-            <div class="image-wrapper"><img src="ecommerce.jpg" alt="E-commerce"></div>
+            <div class="image-wrapper"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEivVSeYumHlxqIXoTTMRXGlAk_idLLy8kEVUti3NdhWqDE20VTTthgXqJOprBtCs2c06f1PCZokZuMaLyQg7JrJ1stwBNvRjo1JlcQL0TueUkzmKJPehx_5I4nUTQiLYF1B0pc67cJac6yB-y_ZY_vwrJ8O0lv-Uc1kGQjBRCAGG3udLzOCnfdR2EWeWAVD/s320/E-commerce%20.png" alt="E-commerce"></div>
             <div class="content">
                 <h3>E-commerce Development</h3>
                 <p>Build powerful online stores with seamless checkout processes and full inventory management.</p>
@@ -561,7 +561,7 @@ body {
         </div>
 
         <div class="service-card">
-            <div class="image-wrapper"><img src="sms.jpg" alt="SMS Service"></div>
+            <div class="image-wrapper"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhpz5bh7VkgUMFNvRM7YDXzeJYjVRNfeWWOBNRbysVKsQTbSOS7v1_lqLkFFhzpQrRrffSpVwTZwUhLqb-8JM4UDB__LKqDDpFSCaN56bc2ri8qhjGXL6Cb_SbLcNupu7G24ZML3f5WEbF_WKRz8hEjZ81gBFdfuo2an43MhKaKz0eb6BJmVVBEcLQ7CWAT/s1080/PPC%20SERVICES.png" alt="SMS Service"></div>
             <div class="content">
                 <h3>Text SMS Service</h3>
                 <p>Connect with customers through transactional and promotional messages to boost engagement.</p>
