--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
 <title>unlitify</title>
 <link rel="stylesheet" href="style.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+    <title>Unlitify | Turning Ambitious Brands into Trusted Leaders</title>
+<meta name="title" content="Unlitify | Turning Ambitious Brands into Trusted Leaders" />
+<meta name="description" content="Real growth comes from real connection. Scale your brand with our expert SEO, Google Ads, and WhatsApp marketing services." />
+
+<meta name="keywords" content="Unlitify, Digital Marketing Agency, WhatsApp Marketing, SEO Services, Google Ads Expert, Growth Strategy, Brand Positioning, Central India Digital Agency, Aviral Pathak, PPC Advertising, Social Media Marketing, Content Creation, E-commerce Development, Digital Strategy Agency USA, Growth Marketing New York, SEO Services London, WhatsApp Marketing India, Digital Marketing Agency Berlin, Marketing Strategy Paris, SEO Agency Dubai, Mumbai Digital Marketing, Bangalore Tech Growth, Delhi NCR SEO Experts, Pune Marketing Consultants, Hyderabad Digital Strategy, Global Brand Positioning, International PPC Management, Cross-border E-commerce Growth, Silicon Valley Startup Marketing, European Market Entry Strategy, Multi-language SEO, Lead Generation USA, Brand Scaling Germany, Digital Storytelling France, Aviral Pathak Global, Remote Growth Partner, Strategic Content Marketing Global, High-Ticket Client Acquisition, Tech Marketing Agency Europe, Performance Marketing San Francisco, Digital Strategy Frankfurt,
+    Global Creator Economy Consultant, Unlitify, Aviral Pathak, OpenBox Organization, Digital Growth Partner, Brand Clarity Strategy, Data-Driven Marketing, WhatsApp Marketing Automation, Targeted WhatsApp Campaigns, 
+    SEO for Startups, Technical SEO Audit, Local SEO Central India, High ROI Google Ads, Performance Marketing Agency, PPC Management, Social Media Brand Building, 
+    Instagram Growth Strategy, LinkedIn Marketing for Founders, Content Marketing Systems, Strategic Storytelling, Website Design for Agencies, E-commerce Conversion Optimization, Text SMS Marketing, 
+    RCS Messaging Services, Podcast Monetization Strategy, Creator Economy Consultant, Lead Generation Systems, Digital Transformation, Business Scaling Experts, Fractional CMO Services,
+    Unlitify Chandrapur, Digital Marketing Agency in Chandrapur, Best SEO Services Chandrapur, Social Media Marketing Chandrapur, WhatsApp Marketing Chandrapur, Website Development Chandrapur, Chandrapur Business Growth, Local SEO Chandrapur, Marketing Consultant Chandrapur, Lead Generation Chandrapur, Aviral Pathak Chandrapur, Advertising Agency Chandrapur, Industrial Marketing Chandrapur, Digital Strategy for Chandrapur Businesses, Best Digital Marketer in Chandrapur Maharashtra" />
+    
+
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://unlitify.vercel.app/" />
+<meta property="og:title" content="Unlitify | Turning Ambitious Brands into Trusted Leaders" />
+<meta property="og:description" content="Real growth comes from real connection. Scale your brand with our expert SEO, Google Ads, and WhatsApp marketing services." />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://unlitify.vercel.app/" />
+<meta property="twitter:title" content="Unlitify | Turning Ambitious Brands into Trusted Leaders" />
+<meta property="twitter:description" content="Real growth comes from real connection. Scale your brand with our expert SEO, Google Ads, and WhatsApp marketing services." />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
 </head>
 <body>
 
