Enhance SEO metadata in seo.html
Added SEO meta tags for improved search engine visibility.

--- a/seo.html
+++ b/seo.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>SEO Services | Unlitify - Rank #1 with Data-Driven Growth</title>
+<meta name="title" content="SEO Services | Unlitify - Rank #1 with Data-Driven Growth" />
+<meta name="description" content="Master search engines with Unlitify. Expert On-page, Technical, and Off-page SEO strategy, Keyword Research, and Competitor Analysis to scale your brand visibility." />
+
+<meta name="keywords" content="SEO Agency India, Technical SEO Audit, Professional Keyword Research, On-Page SEO Optimization, Backlink Building Strategy, Competitor SEO Analysis, White Hat SEO Services, Unlitify SEO, Search Engine Marketing Chandrapur, Global SEO Strategy, Increase Organic Traffic, E-commerce SEO Experts" />
+
+<meta property="og:type" content="article" />
+<meta property="og:url" content="https://unlitify.vercel.app/seo-services.html" />
+<meta property="og:title" content="Data-Driven SEO Services | Unlitify Growth Agency" />
+<meta property="og:description" content="We don't just chase rankings; we chase revenue. Discover our 6-pillar SEO approach to dominate search results." />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" /> <meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:title" content="SEO Services | Unlitify - Rank #1 with Data-Driven Growth" />
+<meta property="twitter:description" content="Build search authority that lasts. Explore our expert SEO services from technical audits to global strategy." />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <header class="header-wrapper">
