Enhance About Us page with SEO metadata
Added meta tags for SEO and social media sharing.

--- a/pages/About-us.html
+++ b/pages/About-us.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>About Us | Unlitify - Founded by Aviral Pathak</title>
+<meta name="title" content="About Us | Unlitify - Founded by Aviral Pathak" />
+<meta name="description" content="Discover the story of Unlitify. Built by OpenBox Organization and founder Aviral Pathak, we are a digital powerhouse transforming brands through clarity and connection." />
+
+<meta name="keywords" content="Unlitify Story, OpenBox Organization, Aviral Pathak Entrepreneur, Digital Strategy Founders, Chandrapur Student Community, Brand Philosophy, Clarity over Noise, Growth Marketing Team, Central India Creative Agency, Podcaster Led Agency" />
+
+<meta property="og:type" content="profile" />
+<meta property="og:url" content="https://unlitify.vercel.app/About-us.html" />
+<meta property="og:title" content="The Story Behind Unlitify | Growth & Clarity" />
+<meta property="og:description" content="From Central India's largest student community to a global growth agency. Meet the team behind Unlitify." />
+<meta property="og:image" content="https://blogger.googleusercontent.com/img/a/AVvXsEjfVDkgW1JUyw5iwouB6zPni-6yXI8TR5xv3Rpqi_G6xNieH9eUPzu4hmzOzuH9rPfXs2-jgsCuJsmo8OWIe0kNYpHHxwLJEGKD67tO6mUtH0qhuMPOFNm1X3E3cIu-L5oLcloH-AF6uF_giIgRvHD_VBIyHjghZyNOYXKh_Zk7ihyLveYVe6mk2p3ytr7r" />
+
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:title" content="Unlitify | Built for Ambitious Brands" />
+<meta property="twitter:description" content="We don't just post content; we build ecosystems. Learn about our philosophy." />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
