--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Join the Team | Unlitify - Build the Future of Growth</title>
+<meta name="title" content="Join the Team | Unlitify - Build the Future of Growth" />
+<meta name="description" content="No CVs. No corporate ladders. Unlitify is looking for builders, Growth Hunters, and Content Architects to join our lean startup team. Apply now to build with us." />
+
+<meta name="keywords" content="Unlitify Careers, Digital Marketing Jobs Chandrapur, Remote Freelance Marketing Roles, Growth Hunter Jobs, Startup Hiring India, Content Architect Gigs, Marketing Internships Central India, Build With Unlitify, Aviral Pathak Hiring, Creative Agency Roles, Work at Unlitify" />
+
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://unlitify.vercel.app/jobs.html" />
+<meta property="og:title" content="Don't Apply for a Job. Build Something with Unlitify." />
+<meta property="og:description" content="We're hiring humans, not resumes. Check out our open roles for Growth Hunters, Creators, and Strategy Interns." />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" /> <meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:title" content="Join the Unlitify Builder Team" />
+<meta property="twitter:description" content="Looking for hungry builders to join our lean startup. No age limits, no degree requirements. Just skill." />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
