Enhance SEO with meta tags in our-approch.html
Added meta tags for SEO and social sharing.

--- a/pages/our-approch.html
+++ b/pages/our-approch.html
@@ -298,7 +298,21 @@
         }
     }
 </style>
+<title>Our Strategic Approach | Unlitify - Data-Driven Growth Process</title>
+<meta name="title" content="Our Strategic Approach | Unlitify - Data-Driven Growth Process" />
+<meta name="description" content="Discover the Unlitify methodology: A 4-step strategic process involving Discovery, Clarity Blueprints, Multi-Channel Execution, and Data-Driven Scaling to help brands dominate." />
 
+<meta name="keywords" content="Digital Marketing Methodology, Strategic Growth Process, Marketing Audit Services, Brand Discovery Phase, Scaling Digital Campaigns, Data-Driven Marketing Strategy, Unlitify Approach, Marketing Execution Plan, Business Growth Framework, Conversion Rate Optimization Strategy" />
+
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://unlitify.vercel.app/our-approch.html" />
+<meta property="og:title" content="How We Scale Brands: The Unlitify Methodology" />
+<meta property="og:description" content="We don't believe in guesswork. Explore our 4-step approach to turning noise into market-leading clarity." />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:title" content="Our Strategic Approach | Unlitify" />
+<meta property="twitter:description" content="Step-by-step clarity. From audit to scaling, see how Unlitify partners with ambitious brands." />
 </head>
 <body>
 
