--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
+        <link rel="icon" type="image/png" sizes="32x32" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhtN1xDk6tNJAwvTdRul0S5OL4585EcXgBbUaRQ4cGKZDpzOcXr2Nux_DBE_sAmbgHj-CZhaKk1EbD4M6SOrD4xVarLEXfM2tq7P8lWTgaXKEPBms3guLno4j-vz45uN6mDvNdCVQB3aC7nbwjdRpTUWMXtWVGnElOhwGx4tfn1VMLJcmDGWhQ8maKWq4Hd/s1600/f324570f-d495-46b2-9722-1152544b80c7%20(1).png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhtN1xDk6tNJAwvTdRul0S5OL4585EcXgBbUaRQ4cGKZDpzOcXr2Nux_DBE_sAmbgHj-CZhaKk1EbD4M6SOrD4xVarLEXfM2tq7P8lWTgaXKEPBms3guLno4j-vz45uN6mDvNdCVQB3aC7nbwjdRpTUWMXtWVGnElOhwGx4tfn1VMLJcmDGWhQ8maKWq4Hd/s1600/f324570f-d495-46b2-9722-1152544b80c7%20(1).png">
+<link rel="shortcut icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhtN1xDk6tNJAwvTdRul0S5OL4585EcXgBbUaRQ4cGKZDpzOcXr2Nux_DBE_sAmbgHj-CZhaKk1EbD4M6SOrD4xVarLEXfM2tq7P8lWTgaXKEPBms3guLno4j-vz45uN6mDvNdCVQB3aC7nbwjdRpTUWMXtWVGnElOhwGx4tfn1VMLJcmDGWhQ8maKWq4Hd/s1600/f324570f-d495-46b2-9722-1152544b80c7%20(1).png">
+
+<link rel="apple-touch-icon" sizes="180x180" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhtN1xDk6tNJAwvTdRul0S5OL4585EcXgBbUaRQ4cGKZDpzOcXr2Nux_DBE_sAmbgHj-CZhaKk1EbD4M6SOrD4xVarLEXfM2tq7P8lWTgaXKEPBms3guLno4j-vz45uN6mDvNdCVQB3aC7nbwjdRpTUWMXtWVGnElOhwGx4tfn1VMLJcmDGWhQ8maKWq4Hd/s1600/f324570f-d495-46b2-9722-1152544b80c7%20(1).png">
+
+<link rel="manifest" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhtN1xDk6tNJAwvTdRul0S5OL4585EcXgBbUaRQ4cGKZDpzOcXr2Nux_DBE_sAmbgHj-CZhaKk1EbD4M6SOrD4xVarLEXfM2tq7P8lWTgaXKEPBms3guLno4j-vz45uN6mDvNdCVQB3aC7nbwjdRpTUWMXtWVGnElOhwGx4tfn1VMLJcmDGWhQ8maKWq4Hd/s1600/f324570f-d495-46b2-9722-1152544b80c7%20(1).png">
+
+<meta name="msapplication-TileColor" content="#2b5aed">
+<meta name="theme-color" content="#ffffff">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>unlitify</title>
