--- a/index.html
+++ b/index.html
@@ -1117,6 +1117,48 @@ body {
     </div>
 </div>
 
+  <div class="wa-chat-wrapper" id="waChatPopup">
+    <div class="wa-chat-bubble">
+        <button class="close-chat" onclick="document.getElementById('waChatPopup').style.display='none'">×</button>
+        
+        <div class="agent-info">
+            <div class="agent-avatar">
+                <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjfVDkgW1JUyw5iwouB6zPni-6yXI8TR5xv3Rpqi_G6xNieH9eUPzu4hmzOzuH9rPfXs2-jgsCuJsmo8OWIe0kNYpHHxwLJEGKD67tO6mUtH0qhuMPOFNm1X3E3cIu-L5oLcloH-AF6uF_giIgRvHD_VBIyHjghZyNOYXKh_Zk7ihyLveYVe6mk2p3ytr7r=w200" alt="Aviral Pathak">
+                <span class="online-status"></span>
+            </div>
+            <div class="agent-text">
+                <p class="status-alert">Agent <strong>Aviral</strong> is online</p>
+                <p class="cta-text">Get your job done now!</p>
+            </div>
+        </div>
+        
+        <a href="https://wa.me/917020729200?text=Hi%20Aviral,%20I'm%20visiting%20Unlitify%20and%20want%20to%20get%20started%20on%20a%20project!" 
+           class="wa-btn" 
+           target="_blank">
+            <i class="fab fa-whatsapp"></i> Chat with Aviral
+        </a>
+    </div>
+</div>
+  <style> .close-chat {
+    position: absolute;
+    top: 10px;
+    right: 12px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    color: #94a3b8;
+    cursor: pointer;
+    line-height: 1;
+    padding: 5px;
+}
+
+.close-chat:hover {
+    color: #0f172a;
+}
+
+/* Ensure Font Awesome is loaded for the icon */
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css');</style>
+
 </body>
 </html>
 
