--- a/index.html
+++ b/index.html
@@ -201,174 +201,162 @@
     }
 </style>
 
-<section class="hero">
-    <div class="hero-content">
-        <h1>
-            Your Brand Deserves<br>
-            <span>Strategic Growth</span>
+<section class="themed-hero">
+    <div class="hero-content-stack">
+        <h1 class="themed-title">
+            Your Brand Deserves <br>
+            <span class="ityped"></span>
         </h1>
-
-        <p>
-            Data-driven digital marketing that converts. We help growing businesses
-            build unstoppable online presence through proven strategies.
+        
+        <p class="themed-subtitle">
+            Data-driven digital marketing that converts. We help growing businesses build unstoppable online presence through proven strategies.
         </p>
-
-        <div class="buttons">
-            <a href="#" class="btn primary">
+        
+        <div class="themed-btn-group">
+            <a href="https://wa.me/917020729200?text=Hi%20Aviral,%20I'm%20ready%20to%20start%20growing." class="btn-fill">
                 <i class="fa-solid fa-arrow-up-right-from-square"></i> Start Growing
             </a>
-            <a href="#" class="btn outline">
+            <a href="#services" class="btn-outline">
                 Explore Services <i class="fa-solid fa-arrow-right"></i>
             </a>
+        </div>
+
+        <div class="hero-wa-badge">
+            <div class="badge-avatar">
+                <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjfVDkgW1JUyw5iwouB6zPni-6yXI8TR5xv3Rpqi_G6xNieH9eUPzu4hmzOzuH9rPfXs2-jgsCuJsmo8OWIe0kNYpHHxwLJEGKD67tO6mUtH0qhuMPOFNm1X3E3cIu-L5oLcloH-AF6uF_giIgRvHD_VBIyHjghZyNOYXKh_Zk7ihyLveYVe6mk2p3ytr7r=w200" alt="Aviral">
+                <span class="dot-online"></span>
+            </div>
+            <div class="badge-text">
+                <strong>Aviral Pathak</strong> is online now
+            </div>
         </div>
     </div>
 </section>
 
+<script src="https://unpkg.com/ityped@0.0.10"></script>
+<script>
+    window.ityped.init(document.querySelector('.ityped'), {
+        strings: ['Strategic Growth', 'Digital Clarity', 'Market Dominance', 'Relentless Scaling'],
+        typeSpeed: 100,
+        backDelay: 2000,
+        loop: true,
+        showCursor: true
+    })
+</script>
 
-
-<style>* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Segoe UI", system-ui, sans-serif;
-}
-
-body {
-    background: #f7fbff;
-    color: #0f172a;
-}
-
-/* HEADER */
-.header {
-    background: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 18px 8%;
-    border-bottom: 1px solid #e5e7eb;
-    position: sticky;
-    top: 0;
-    z-index: 100;
-}
-
-.logo {
-    font-size: 22px;
-    font-weight: 700;
-}
-
-.logo span {
-    color: #2563eb;
-}
-
-.nav a {
-    margin: 0 18px;
-    text-decoration: none;
-    color: #475569;
-    font-weight: 500;
-    transition: 0.3s;
-}
-
-.nav a:hover {
-    color: #2563eb;
-}
-
-.book-btn {
-    background: white;
-    border: 1px solid #e5e7eb;
-    padding: 10px 18px;
-    border-radius: 10px;
-    font-weight: 600;
-    cursor: pointer;
-    display: flex;
-    gap: 8px;
-    align-items: center;
-    transition: 0.3s;
-}
-
-.book-btn:hover {
-    background: #2563eb;
-    color: white;
-}
-
-/* HERO */
-.hero {
-    padding: 120px 8%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+<script src="https://unpkg.com/ityped@0.0.10"></script>
+<script>
+    window.ityped.init(document.querySelector('.swap-text'), {
+        strings: ['Strategic Growth.', 'Market Dominance.', 'Digital Clarity.', 'Relentless Scaling.'],
+        typeSpeed: 90,
+        backDelay: 2000,
+        loop: true
+    })
+</script>
+<style>
+  .themed-hero {
+    padding: 120px 20px 80px;
     text-align: center;
+    background: #ffffff;
+    font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
-.hero-content {
-    max-width: 820px;
+.hero-content-stack {
+    max-width: 900px;
+    margin: 0 auto;
 }
 
-.hero h1 {
-    font-size: 56px;
-    line-height: 1.2;
+.themed-title {
+    font-size: clamp(2.5rem, 8vw, 4.5rem);
     font-weight: 800;
+    color: #0f172a; /* Dark Navy from your image */
+    line-height: 1.1;
+    margin-bottom: 24px;
+    letter-spacing: -1px;
 }
 
-.hero h1 span {
-    color: #2563eb;
+.ityped {
+    color: #2b5aed; /* The Blue from your image */
 }
 
-.hero p {
-    margin-top: 25px;
-    font-size: 18px;
-    color: #475569;
-    line-height: 1.7;
+.themed-subtitle {
+    font-size: 1.15rem;
+    color: #64748b;
+    line-height: 1.6;
+    max-width: 700px;
+    margin: 0 auto 40px;
 }
 
-.buttons {
-    margin-top: 40px;
+/* Button Group Styling */
+.themed-btn-group {
     display: flex;
+    gap: 16px;
     justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
+    margin-bottom: 50px;
 }
 
-.btn {
-    padding: 14px 28px;
-    border-radius: 12px;
-    font-weight: 600;
+.btn-fill {
+    background: #2b5aed;
+    color: white;
+    padding: 18px 36px;
+    border-radius: 14px;
     text-decoration: none;
+    font-weight: 700;
+    font-size: 1rem;
+    box-shadow: 0 10px 25px rgba(43, 90, 237, 0.3);
+    transition: 0.3s ease;
     display: flex;
     align-items: center;
     gap: 10px;
-    transition: 0.3s;
 }
 
-.primary {
-    background: #2563eb;
-    color: white;
-    box-shadow: 0 15px 30px rgba(37, 99, 235, 0.3);
+.btn-outline {
+    background: transparent;
+    color: #2b5aed;
+    padding: 18px 36px;
+    border: 2px solid #2b5aed;
+    border-radius: 14px;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 1rem;
+    transition: 0.3s ease;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
-.primary:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 25px 40px rgba(37, 99, 235, 0.4);
+.btn-fill:hover { transform: translateY(-3px); box-shadow: 0 15px 30px rgba(43, 90, 237, 0.4); }
+.btn-outline:hover { background: #f0f4ff; }
+
+/* WhatsApp Badge Styling */
+.hero-wa-badge {
+    display: inline-flex;
+    align-items: center;
+    gap: 12px;
+    background: #f8fafc;
+    padding: 8px 20px 8px 8px;
+    border-radius: 100px;
+    border: 1px solid #e2e8f0;
 }
 
-.outline {
-    border: 2px solid #2563eb;
-    color: #2563eb;
+.badge-avatar {
+    position: relative;
+    width: 35px;
+    height: 35px;
 }
 
-.outline:hover {
-    background: #2563eb;
-    color: white;
+.badge-avatar img { width: 100%; height: 100%; border-radius: 50%; }
+.dot-online {
+    position: absolute; bottom: 0; right: 0;
+    width: 10px; height: 10px; background: #22c55e;
+    border: 2px solid white; border-radius: 50%;
 }
 
-/* RESPONSIVE */
-@media(max-width: 768px) {
-    .hero h1 {
-        font-size: 38px;
-    }
+.badge-text { font-size: 0.85rem; color: #475569; }
 
-    .nav {
-        display: none;
-    }
+@media (max-width: 600px) {
+    .themed-btn-group { flex-direction: column; width: 100%; }
+    .btn-fill, .btn-outline { justify-content: center; }
 }
 </style>
 
