Update links to point to specific service pages

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
             <div class="content">
                 <h3>Google Ads</h3>
                 <p>Target potential customers at the exact moment they're searching for products or services like yours.</p>
-                <a href="#" class="btn-link">Learn more</a>
+                <a href="Google Ads.html" class="btn-link">Learn more</a>
             </div>
         </div>
 
@@ -524,7 +524,7 @@
             <div class="content">
                 <h3>WhatsApp Marketing</h3>
                 <p>Connect with your Clients Directly through WhatsApp & Target potential customers with ease and automation.</p>
-                <a href="#" class="btn-link">Learn more</a>
+                <a href=">WhatsApp Marketing.html" class="btn-link">Learn more</a>
             </div>
         </div>
 
