--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
             <div class="content">
                 <h3>Pay-per-click (PPC)</h3>
                 <p>Drive targeted traffic to your website and only pay when someone clicks on your ad.</p>
-                <a href="#" class="btn-link">Learn more</a>
+                <a href="Pay-per-click (PPC).html" class="btn-link">Learn more</a>
             </div>
         </div>
 
@@ -542,7 +542,7 @@
             <div class="content">
                 <h3>Social Media Marketing</h3>
                 <p>Build your Brand Presence and Engage with Your Audience Across Various Social Media Platforms.</p>
-                <a href="#" class="btn-link">Learn more</a>
+                <a href="Social Media Marketing.html" class="btn-link">Learn more</a>
             </div>
         </div>
 
@@ -551,7 +551,7 @@
             <div class="content">
                 <h3>Email Marketing</h3>
                 <p>Connect with your customers through personalized email campaigns that nurture leads and drive sales.</p>
-                <a href="#" class="btn-link">Learn more</a>
+                <a href="Email Marketing.html" class="btn-link">Learn more</a>
             </div>
         </div>
 
@@ -560,7 +560,7 @@
             <div class="content">
                 <h3>Content Creation</h3>
                 <p>Create engaging, valuable content that attracts and retains customers while establishing brand authority.</p>
-                <a href="#" class="btn-link">Learn more</a>
+                <a href="Content Creation.html" class="btn-link">Learn more</a>
             </div>
         </div>
 
@@ -569,7 +569,7 @@
             <div class="content">
                 <h3>Website Design & Dev</h3>
                 <p>Create stunning, responsive websites that look great on all devices and help you achieve your goals.</p>
-                <a href="#" class="btn-link">Learn more</a>
+                <a href="Website Design & Dev.html" class="btn-link">Learn more</a>
             </div>
         </div>
 
@@ -578,7 +578,7 @@
             <div class="content">
                 <h3>E-commerce Development</h3>
                 <p>Build powerful online stores with seamless checkout processes and full inventory management.</p>
-                <a href="#" class="btn-link">Learn more</a>
+                <a href="E-commerce Development.html" class="btn-link">Learn more</a>
             </div>
         </div>
 
@@ -587,7 +587,7 @@
             <div class="content">
                 <h3>Text SMS Service</h3>
                 <p>Connect with customers through transactional and promotional messages to boost engagement.</p>
-                <a href="#" class="btn-link">Learn more</a>
+                <a href="Text SMS Service.html" class="btn-link">Learn more</a>
             </div>
         </div>
     </div>
