--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             <div class="content">
                 <h3>WhatsApp Marketing</h3>
                 <p>Connect with your Clients Directly through WhatsApp & Target potential customers with ease and automation.</p>
-                <a href=">WhatsApp Marketing.html" class="btn-link">Learn more</a>
+                <a href="WhatsApp Marketing.html" class="btn-link">Learn more</a>
             </div>
         </div>
 
